--- a/views/partials/login.handlebars
+++ b/views/partials/login.handlebars
@@ -2,7 +2,8 @@
     <h3>{{session.user.id}} 님 환영합니다. </h3>
     <a href="/mypage">MyPage</a>
     <a href="/process/logout">로그아웃</a>
-    
+    <h3 id="sessionUserWallet"> {{session.user.walletAddr}} </h3>
+
 {{else}}
     <h1>로그인</h1>
     <br>
